# mmpose

./: .gitignore  Makefile  README.md  check.py  create-checkerboard.py  main.py  pyproject.toml  requirements.txt
calibration/: calibrate.py
output/: osc_sender.py  preview.py
pose/: detector.py  hand_splitter.py  triangulate.py
