[project]
name = "mmpose-multicam"
version = "0.1.0"
description = "Multi-camera 3D human pose, hand, and face landmark detection with OSC output"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchvision",
    "opencv-python",
    "numpy",
    "scipy",
    "python-osc",
    "openmim",
    "mmengine",
    "mmdet",
    "setuptools",
    "wheel"
]

[project.optional-dependencies]
dev = [
    "ruff",
]

[tool.ruff]
line-length = 120
